<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="alert_time_left">30</string>
   <string name="call_emergency_max_conter">2</string>
   <string name="call_emergency_idle_max_counter">30</string>
   <string name="phone_Number_911">911</string>
   
   <string name="app_name">Mobile Life Monitor</string>
   <string name="call_emergency">Call Emergency No.</string>
   <string name="email_emergency">Email Emergency Contact</string>
   <string name="monitor_life">Dial Emergency No.</string>
   <string name="confirm_emergency_contact">Confirm Selected Contact</string>
   <string name="no_emergency_contact">No emergency contact stored. Please select one from menu."</string>
   <string name="selected_emergency_contact">You\'ve selected emergency contact:</string>
   
   <string name="email_failed">Email cannot be sent.  Possible errors.</string>
   <string name="email_subject_line">"EMERGENCY -- NEED HELP -- "</string>
   <string name="email_no_email_set">No emergency email set. No email was sent.</string>
   <string name="email_sending_email">Please wait while sending email to emergency contact...</string>
   <string name="email_sent_email">Completed sending email to emergency contact</string>

   <string name="summary_actions">Summary of emergency actions:</string>
   <string name="summary_emergency_detected">Emergency detected</string>
   <string name="summary_emergency_num_called">Emergency contact called</string>
   <string name="summary_911_called">Emergency 911 called</string>
   <string name="summary_email_sent">Emergency contact emailed</string>
   <string name="summary_user_info">Phone user info:</string>
   <string name="summary_emergency_contact_info">Emergency contact info:</string>
   <string name="summary_name">Name = </string>
   <string name="summary_phone">Phone = </string>
   <string name="summary_address">Address = </string>
   <string name="summary_email">Email = </string>

   <string name="config_about">About</string>
   <string name="config_setup">Setup</string>
   <string name="config_userinfo">Your Info.</string>
   <string name="config_username_hint">Your name</string>
   <string name="config_useraddr_hint">Your address</string>
   <string name="config_userphone_hint">Your phone number</string>
   <string name="config_useremail_hint">Your email address</string>
   <string name="config_useremailpassword_hint">Your email password</string>
   <string name="config_emergencyinfo">Emergency Info.</string>
   <string name="config_emergencyname_hint">Someone's name</string>
   <string name="config_emergencyaddr_hint">Someone's address</string>
   <string name="config_emergencyphone_hint">Someone's phone number</string>
   <string name="config_emergencyemail_hint">Someone's email address</string>
   <string name="config_call911">Call 911 if line busy?</string>
   <string name="config_textmsg">Text Message</string>
   <string name="config_textmsg_hint">Message you want to send when emergency</string>
   <string name="config_voicemsg">Voice Message.</string>
   <string name="config_voicemsg_recorded">Recorded</string>
   <string name="config_voicemsg_norecorded">Need Record</string>
   <string name="config_sensitivity">Sensitivity</string>
   <string name="config_sensitivity_status">Not Set</string>
   <string name="config_systemstatus">System Status:</string>
   <string name="config_systemstatus_active">Active</string>
   <string name="config_systemstatus_inactive">Inactive</string>
   <string name="config_systemaction_activate">Activate</string>
   <string name="config_systemaction_deactivate">Deactivate</string>

   <string name="notification_no_voicemail">
      The emulator doesn't support voice recording yet. So we just assume that the voice now has been recorded.
   </string>
   <string name="config_is_incomplete">
      The configuration is not complete. Please complete all the settings first.
   </string>

   <string name="sensitivity_notsensitive">Not Sensitive</string>
   <string name="sensitivity_somewhat">Somewhat</string>
   <string name="sensitivity_normal">Normal</string>
   <string name="sensitivity_sensitive">Sensitive</string>
   <string name="sensitivity_verysensitive">Very Sensitive</string>
   <string name="sensitivity_teststatus_ok">You did it!!!</string>
   <string name="sensitivity_testagain">Test Again</string>
   <string name="sensitivity_testing_insession">
      Choose your sensitivity. Then shake your device and see if the impact is at the level you like.
   </string>

   <string name="alert_are_you_okay">Are you okay?</string>
   <string name="alert_please_press_button">Please confirm that you are okay by pressing the button below.</string>
   <string name="alert_yes">YES!</string>
   <string name="alert_will_call_msg">I will start contacting people if I am not hearing from you in</string>
   <string name="alert_second">second(s)</string>
   <string name="alert_okay_notification">Thank God! I'm glad that you are okay.</string>
   
   <string name="geocode_location_address">455 Market St. San Francisco, California</string>
   
   <string name="about_appname">Mobile Life Monitor</string>
   <string name="about_version">Version 0.1</string>
   <string name="about_by">by</string>
   <string name="about_by_ed">Sukit Tretriluxana</string>
   <string name="about_by_chate">Chate Luu</string>

</resources>
