<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical">>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    
        <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="18dip"
		    android:text="@string/summary_actions" />
     </LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
		    <TextView
	        	 android:id="@+id/summary_emergency_detected_status"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
				 android:gravity="left"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="" />
            <TextView
	        	 android:id="@+id/summary_emergency_detected"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:gravity="right"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="@string/summary_emergency_detected" />		         
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
		    <TextView
	        	 android:id="@+id/summary_emergency_num_called_status"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
				 android:gravity="left"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="" />
            <TextView
	        	 android:id="@+id/summary_emergency_num_called"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:gravity="right"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="@string/summary_emergency_num_called" />		         
        </LinearLayout>
    </LinearLayout>

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
		    <TextView
	        	 android:id="@+id/summary_911_called_status"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
				 android:gravity="left"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="" />
            <TextView
	        	 android:id="@+id/summary_911_called"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:gravity="right"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="@string/summary_911_called" />		         
        </LinearLayout>
    </LinearLayout>
         
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
		    <TextView
	        	 android:id="@+id/summary_email_sent_status"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
				 android:gravity="left"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="" />
            <TextView
	        	 android:id="@+id/summary_email_sent"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:gravity="right"
		         android:paddingBottom="10dip"
		         android:textSize="15dip"
		         android:textColor="#0F0"
		         android:text="@string/summary_email_sent" />		         
        </LinearLayout>
    </LinearLayout>	       

</LinearLayout>