<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:paddingBottom="5dip"
   android:orientation="vertical">
   >

   <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:gravity="center"
      android:layout_weight="1">

      <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="wrap_content">

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
               id="@+id/sensitivity_notsensitive"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
            <TextView
               android:layout_width="120dip"
               android:layout_height="wrap_content"
               android:text="@string/sensitivity_notsensitive" />
            <View
               id="@+id/sensitivity_bar_10"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_10"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_9"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_9"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
               id="@+id/sensitivity_somewhat"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
            <TextView
               android:layout_width="120dip"
               android:layout_height="wrap_content"
               android:text="@string/sensitivity_somewhat" />
            <View
               id="@+id/sensitivity_bar_8"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_8"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_7"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_7"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
               id="@+id/sensitivity_normal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
            <TextView
               android:layout_width="120dip"
               android:layout_height="wrap_content"
               android:text="@string/sensitivity_normal" />
            <View
               id="@+id/sensitivity_bar_6"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_6"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_5"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_5"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
               id="@+id/sensitivity_sensitive"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
            <TextView
               android:layout_width="120dip"
               android:layout_height="wrap_content"
               android:text="@string/sensitivity_sensitive" />
            <View
               id="@+id/sensitivity_bar_4"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_4"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_3"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_3"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
               id="@+id/sensitivity_verysensitive"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
            <TextView
               android:layout_width="120dip"
               android:layout_height="wrap_content"
               android:text="@string/sensitivity_verysensitive" />
            <View
               id="@+id/sensitivity_bar_2"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_2"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="3dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_1"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_1"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>

         <LinearLayout
            android:paddingTop="6dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <View
               id="@+id/sensitivity_bar_0"
               android:layout_gravity="center_vertical"
               android:background="@color/sensitivity_bar_0"
               android:layout_width="120dip"
               android:layout_height="15dip" />
         </LinearLayout>
      </LinearLayout>
   </LinearLayout>

   <LinearLayout
      id="@+id/statusColor"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:padding="5dip">

      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingBottom="10dip"
         android:gravity="center_horizontal">
         <TextView
            android:text="@string/sensitivity_teststatus"
            android:textAlign="end"
            android:textSize="16sp"
            android:paddingRight="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
         <TextView
            id="@+id/status"
            android:textAlign="start"
            android:text="@string/sensitivity_teststatus_ok"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#00ff00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
      </LinearLayout>

      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <Button
            android:text="@string/sensitivity_testagain"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

         <Button
            android:text="@string/sensitivity_accept"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

      </LinearLayout>
   </LinearLayout>
</LinearLayout>
